flux/apps/tranga/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tranga-api
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://tranga-api.multimedia-factory.svc:6531"
    uptime-kuma.io/name: "tranga-api"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/status-codes: "404"
    uptime-kuma.io/group: "Media & Streaming"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tranga-api
  template:
    metadata:
      labels:
        app: tranga-api
    spec:
      enableServiceLinks: false
      containers:
        - name: tranga-api
          image: glax/tranga-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6531
          volumeMounts:
            - name: tranga-manga
              mountPath: /Manga
            - name: tranga-settings
              mountPath: /usr/share/tranga-api
      volumes:
        - name: tranga-manga
          persistentVolumeClaim:
            claimName: tranga-manga
        - name: tranga-settings
          persistentVolumeClaim:
            claimName: tranga-settings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tranga-website
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://tranga-website.multimedia-factory.svc:80"
    uptime-kuma.io/name: "tranga-website"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Media & Streaming"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tranga-website
  template:
    metadata:
      labels:
        app: tranga-website
    spec:
      enableServiceLinks: false
      containers:
        - name: tranga-website
          image: glax/tranga-website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
