flux/apps/tranga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tranga-api
  namespace: multimedia-factory
spec:
  selector:
    app: tranga-api
  ports:
    - protocol: TCP
      port: 6531
      targetPort: 6531
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: tranga-website
  namespace: multimedia-factory
spec:
  selector:
    app: tranga-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
